--- a/styles/main.css
+++ b/styles/main.css
@@ -30,15 +30,9 @@ hr {
 
 #topBar {
     --border-radius: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10px;
-    margin-top: 0;
+    margin: 0 auto 10px;
     text-align: center;
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 50px;
     line-height: 28px;
     background-color: #165384;
     width: fit-content;
@@ -56,7 +50,7 @@ hr {
 
 #test:hover {
     background-color: #5e5e5e;
-    color: rgba(0, 0, 0, 1);
+    color: #000;
     border-radius: 5px;
     cursor: not-allowed;
 }
@@ -67,7 +61,7 @@ hr {
 
 .item:hover {
     background-color: #7799BB;
-    color: rgba(0, 0, 0, 1);
+    color: #000;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -94,9 +88,8 @@ hr {
 }
 
 table {
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0px;
+    margin: 0 auto;
+    padding: 0;
 }
 
 .submittedTemp {
@@ -130,18 +123,11 @@ table {
     text-align: center;
     width: 120px;
     padding: 3px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
 }
 
-.subNames {
-    width: 115px;
-}
-
-.subDates {
-    width: 115px;
-}
-
+.subNames,
+.subDates,
 .subDiff {
     width: 115px;
 }
@@ -158,21 +144,18 @@ sup {
 
 #study-dates {
     width: fit-content;
-    margin-right: auto;
-    margin-left: auto;
+    margin: 0 auto;
 }
 
 .dateList {
     text-align: left;
 }
 
-
-/** CALENDAR CSS **/
+/* Calendar CSS */
 
 #calendar {
     width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
 }
 
 .single-cal {
@@ -180,9 +163,7 @@ sup {
     width: var(--cal-width);
     vertical-align: top;
     padding: 0;
-    margin-left: 2.5%;
-    margin-right: 2.5%;
-    margin-bottom: 25px;
+    margin: 0 0 2.5% 25px;
     overflow: hidden;
     border-radius: 15px;
 }
@@ -254,15 +235,14 @@ sup {
 
 #calendar-links {
     width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     margin-top: 0;
 }
 
-
-/* Add media queries for smaller screens */
+/* Media queries for smaller screens */
 
 @media screen and (max-width:720px) {
+
     .weekdays li,
     .days li {
         width: 13.1%;
@@ -270,16 +250,19 @@ sup {
 }
 
 @media screen and (max-width: 420px) {
+
     .weekdays li,
     .days li {
         width: 12.5%;
     }
+
     .days li .active {
         padding: 2px;
     }
 }
 
 @media screen and (max-width: 290px) {
+
     .weekdays li,
     .days li {
         width: 12.2%;
