--- a/styles/main.css
+++ b/styles/main.css
@@ -1,13 +1,8 @@
 :root {
     --cal-width: 45%;
-    --cal-month-color: #165384;
-    --weekday-color: #8DA6C0;
-    --day-color: #EEF4F4;
 }
 
 body {
-    color: #7799BB;
-    background-color: #011627;
     font-family: Arial, Helvetica, sans-serif;
     padding: 0;
     margin: 0;
@@ -15,7 +10,6 @@ body {
 
 hr {
     height: 2px;
-    background-color: #7799BB;
     border: none;
 }
 
@@ -23,9 +17,8 @@ hr {
     text-align: center;
 }
 
-#pageTitle {
+.pageTitle {
     font-size: 20px;
-    color: #8DA6C0;
 }
 
 #topBar {
@@ -34,7 +27,6 @@ hr {
     text-align: center;
     padding: 10px 50px;
     line-height: 28px;
-    background-color: #165384;
     width: fit-content;
     border-bottom-left-radius: var(--border-radius);
     border-bottom-right-radius: var(--border-radius);
@@ -43,14 +35,11 @@ hr {
 .item {
     text-decoration: none;
     padding: 3px;
-    color: #d7e4f0;
     font-size: 16px;
     transition: color 0.25s ease-out;
 }
 
 #test:hover {
-    background-color: #5e5e5e;
-    color: #000;
     border-radius: 5px;
     cursor: not-allowed;
 }
@@ -60,8 +49,6 @@ hr {
 }
 
 .item:hover {
-    background-color: #7799BB;
-    color: #000;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -74,9 +61,49 @@ hr {
     font-size: 18px;
 }
 
+#blackout {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 98;
+    background-color: rgb(0, 0, 0, 0.75);
+}
+
+#themepopup {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+#themebox {
+    position: absolute;
+    padding: 30px 50px;
+    border-radius: 10px;
+    text-align: center;
+    width: fit-content;
+    height: fit-content;
+    z-index: 99;
+}
+
+#themecontent {
+    z-index: 99;
+}
+
+#themebutton {
+    display: inline-block;
+    position: absolute;
+    margin: 15px;
+    padding: 5px 8px;
+    border-radius: 8px;
+    border: 0;
+}
+
 .inputBox {
     border-radius: 5px;
-    background-color: #d7e4f0;
     border: 0;
     padding: 3px;
     text-align: center;
@@ -97,12 +124,11 @@ table {
 }
 
 .cButton {
-    background-color: #7799BB;
-    color: #011627;
     border-radius: 8px;
     border-width: 0;
     padding: 5px;
     font-size: 16px;
+    display: none;
 }
 
 .section:has .cButton {
@@ -110,9 +136,11 @@ table {
 }
 
 .cButton:hover {
-    background-color: #022847;
-    color: #7799BB;
     cursor: pointer;
+}
+
+#goback {
+    margin-bottom: 15px;
 }
 
 #subject-section {
@@ -132,10 +160,6 @@ table {
     width: 115px;
 }
 
-#errormsg {
-    color: darkred;
-}
-
 sup {
     font-size: 9px;
     font-weight: bold;
@@ -151,7 +175,8 @@ sup {
     text-align: left;
 }
 
-/* Calendar CSS */
+
+/* CALENDAR CSS */
 
 #calendar {
     width: 80%;
@@ -171,7 +196,6 @@ sup {
 .month {
     padding: 30px 0;
     width: 100%;
-    background: var(--cal-month-color);
     text-align: center;
 }
 
@@ -182,7 +206,6 @@ sup {
 }
 
 .month ul li {
-    color: white;
     font-size: 20px;
     text-transform: uppercase;
     letter-spacing: 3px;
@@ -192,20 +215,17 @@ sup {
     width: 100%;
     margin: 0;
     padding: 10px 0;
-    background-color: var(--weekday-color);
 }
 
 .weekdays li {
     display: inline-block;
     width: 13.6%;
-    color: var(--cal-month-color);
     text-align: center;
 }
 
 .days {
     width: 100%;
     padding: 10px 0;
-    background: var(--day-color);
     margin: 0;
 }
 
@@ -216,20 +236,15 @@ sup {
     text-align: center;
     margin-bottom: 5px;
     font-size: 12px;
-    color: #777;
 }
 
 .days li .active {
     padding: 3px;
-    background: var(--cal-month-color);
-    color: white !important;
     border-radius: 5px;
 }
 
 .days li .study {
     padding: 3px;
-    background: var(--weekday-color);
-    color: white !important;
     border-radius: 5px;
 }
 
@@ -239,10 +254,28 @@ sup {
     margin-top: 0;
 }
 
+
+/* width */
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+
+/* Track */
+
+ ::-webkit-scrollbar-track {
+    background: rgb(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 30px;
+}
+
+
 /* Media queries for smaller screens */
 
 @media screen and (max-width:720px) {
-
     .weekdays li,
     .days li {
         width: 13.1%;
@@ -250,19 +283,16 @@ sup {
 }
 
 @media screen and (max-width: 420px) {
-
     .weekdays li,
     .days li {
         width: 12.5%;
     }
-
     .days li .active {
         padding: 2px;
     }
 }
 
 @media screen and (max-width: 290px) {
-
     .weekdays li,
     .days li {
         width: 12.2%;
