--- a/styles/main.css
+++ b/styles/main.css
@@ -32,6 +32,13 @@ hr {
     border-bottom-right-radius: var(--border-radius);
 }
 
+#carryYear {
+    width: 16px;
+    height: 16px;
+    padding: 0;
+    margin: 0;
+}
+
 .item {
     text-decoration: none;
     padding: 3px;
@@ -102,6 +109,25 @@ hr {
     border: 0;
 }
 
+#themeTitle {
+    padding: 3px;
+    line-height: 30px;
+}
+
+.calPicker {
+    width: 18px;
+    height: 16px;
+    background-color: rgb(0, 0, 0, 0);
+    border-radius: 5px;
+    border: 0;
+    padding: 0px;
+    text-align: center;
+}
+
+.calPicker::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+}
+
 .inputBox {
     border-radius: 5px;
     border: 0;
@@ -143,6 +169,24 @@ table {
     margin-bottom: 15px;
 }
 
+.subDiff {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 8px;
+    border-radius: 5px;
+    outline: none;
+}
+
+.subDiff::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
 #subject-section {
     display: none;
 }
@@ -158,6 +202,20 @@ table {
 .subDates,
 .subDiff {
     width: 115px;
+}
+
+.indvDate {
+    width: 18px;
+    height: 16px;
+    margin: 1px;
+}
+
+.subYearVal {
+    width: 40px;
+}
+
+#yearCheck {
+    font-size: 15px;
 }
 
 sup {
@@ -187,10 +245,9 @@ sup {
     display: inline-block;
     width: var(--cal-width);
     vertical-align: top;
-    padding: 0;
-    margin: 0 0 2.5% 25px;
+    padding: 5px;
     overflow: hidden;
-    border-radius: 15px;
+    border-radius: 50px;
 }
 
 .month {
@@ -280,6 +337,16 @@ sup {
     .days li {
         width: 13.1%;
     }
+    .single-cal {
+        width: 80%;
+        margin: 0;
+    }
+}
+
+@media screen and (max-width:528px) {
+    #themebutton {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 420px) {
@@ -290,6 +357,17 @@ sup {
     .days li .active {
         padding: 2px;
     }
+    .subNames,
+    .subDates,
+    .subDiff {
+        width: 100px;
+    }
+    .indvDate {
+        width: 17px;
+    }
+    .subYearVal {
+        width: 40px;
+    }
 }
 
 @media screen and (max-width: 290px) {
@@ -297,4 +375,21 @@ sup {
     .days li {
         width: 12.2%;
     }
+}
+
+
+/* Chrome, Safari, Edge, Opera */
+
+.indvDate::-webkit-outer-spin-button,
+.indvDate::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+
+/* Firefox */
+
+.indvDate[type=number] {
+    -moz-appearance: textfield;
+    appearance: textfield;
 }
