--- a/styles/themes/dutchess.css
+++ b/styles/themes/dutchess.css
@@ -7,7 +7,8 @@
     /* page values */
     --title-color: #5caace;
     --top-bar-color: #00527D;
-    --font-color: #2f2f97;
+    /*--font-color: #2f2f97;*/
+    --font-color: var(--top-bar-color);
     --link-color: #9ac6d9;
     --disabled-background: #5E5E5E;
     --hover-text: #FAFAFF;
@@ -21,6 +22,22 @@ body {
     background-color: var(--page-background);
 }
 
+#sbj-form {
+    background-color: var(--title-color);
+}
+
+.main-content {
+    background-color: var(--title-color);
+}
+
+.tut-content {
+    background-color: var(--title-color);
+}
+
+.pic-content {
+    background-color: var(--title-color);
+}
+
 hr {
     background-color: var(--font-color);
 }
@@ -29,7 +46,7 @@ hr {
     color: var(--title-color);
 }
 
-#themebox {
+dialog {
     background-color: var(--top-bar-color);
 }
 
@@ -62,6 +79,10 @@ hr {
 #test:hover {
     background-color: var(--disabled-background);
     color: var(--hover-text);
+}
+
+#returnDates {
+    background-color: var(--title-color);
 }
 
 .item:hover {
