--- a/styles/themes/monotonedark.css
+++ b/styles/themes/monotonedark.css
@@ -22,6 +22,10 @@ body {
     background-color: var(--page-background);
 }
 
+#cover {
+    background-color: var(--page-background);
+}
+
 #sbj-form {
     background-color: var(--title-color);
 }
