--- a/styles/print.css
+++ b/styles/print.css
@@ -1,32 +1,129 @@
-.page {
-    page-break-after: always;
-    position: relative;
-    width: 8.5in;
-    height: 11in;
-}
-
-.page-content {
-    position: absolute;
-    width: 8.125in;
-    height: 10.625in;
-    left: 0.1875in;
-    top: 0.1875in;
-    background-color: rgba(0, 0, 0, 0.2);
-    padding: .5in;
-}
-
-.page-content h1 {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;
-}
-
-.page-content p {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;
-}
-
-#testDate {
-    text-align: center;
-    font-size: 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
+    body {
+        margin: 0;
+        overflow: hidden;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+    
+    #top {
+        padding: 15px;
+        text-align: center;
+        color: var(--title-color);
+    }
+    
+    .background {
+        margin: 0 auto;
+        width: max-content;
+        padding: 35px;
+        border-radius: 10px;
+        text-align: center;
+        background-color: var(--title-color);
+    }
+    
+    footer {
+        position: absolute;
+        bottom: 0px;
+        margin: 0;
+        padding: 0;
+        right: 0;
+        color: rgba(0, 0, 0, 0.25)
+    }
+    
+    #downloaded {
+        z-index: 100;
+    }
+    
+    .page {
+        page-break-after: always;
+        position: relative;
+        width: 8.5in;
+        height: 11in;
+        margin: 0;
+        z-index: 1;
+        color: black!important;
+    }
+    
+    .page-content {
+        position: absolute;
+        width: 7.5in;
+        height: 10in;
+        background-color: rgba(0, 0, 0, 0.1);
+        padding: .5in;
+        margin: 0;
+    }
+    
+    .page-content h1 {
+        text-align: center;
+    }
+    
+    .page-content p {
+        text-align: center;
+        font-size: 18px;
+        width: 70%;
+        margin: 0 auto;
+    }
+    
+    .gens {
+        text-align: center;
+    }
+    
+    #testDate {
+        font-size: 20px;
+    }
+    
+    #genDate {
+        font-size: 18px;
+    }
+    
+    .indivMonth>ul {
+        list-style: none;
+        line-height: 120%;
+        font-size: 18px;
+        text-align: left;
+        /*background-color: beige;*/
+    }
+    
+    #months {
+        margin: 15px 0 auto;
+        text-align: center;
+        columns: 2;
+        /*
+        column-gap: 0;
+        column-width: 100px;
+        column-rule: 5px solid;
+        */
+        column-fill: auto;
+        height: 70%;
+        /*background-color: brown;*/
+        padding-top: 10px;
+    }
+    
+    .indivMonth {
+        /*background-color: teal;*/
+        width: max-content;
+        margin: 0 auto;
+    }
+    
+    .indivMonth>h3 {
+        margin: 0;
+        text-align: left;
+    }
+    
+    #cover {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: red;
+        z-index: 99;
+    }
+    
+    #themebutton {
+        display: inline-block;
+        margin: 5px;
+        padding: 5px 8px;
+        border-radius: 8px;
+        border: 0;
+    }
+    
+    #themebutton:hover {
+        cursor: pointer;
+    }
