--- a/styles/print.css
+++ b/styles/print.css
@@ -2,6 +2,9 @@
         margin: 0;
         overflow: hidden;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
     }
     
     #top {
@@ -19,7 +22,7 @@
         background-color: var(--title-color);
     }
     
-    footer {
+    #pageFoot {
         position: absolute;
         bottom: 0px;
         margin: 0;
@@ -112,8 +115,8 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        background-color: red;
         z-index: 99;
+        background-color: var(--page-background);
     }
     
     #themebutton {
@@ -122,8 +125,36 @@
         padding: 5px 8px;
         border-radius: 8px;
         border: 0;
+        background-color: var(--top-bar-color);
+        color: var(--title-color);
     }
     
     #themebutton:hover {
+        background-color: var(--calculated-hover);
+        color: var(--link-color);
         cursor: pointer;
+    }
+    
+    #mainFoot {
+        margin-top: auto;
+    }
+    
+    .bottomlinks>ul>li {
+        display: inline-block;
+        text-decoration: none;
+        list-style: none;
+    }
+    
+    .bottomlinks>ul>li>a:hover {
+        color: var(--title-color);
+    }
+    
+    .bottomlinks>ul>li>a {
+        text-decoration: none;
+        color: var(--font-color);
+    }
+    
+    footer {
+        margin-top: auto;
+        color: var(--font-color);
     }
