--- a/styles/startPage.css
+++ b/styles/startPage.css
@@ -14,6 +14,7 @@ h2 {
     border-radius: 10px;
     align-content: center;
     text-align: center;
+    background-color: var(--title-color);
 }
 
 .main-content>ul {
@@ -39,6 +40,7 @@ h2 {
     border-radius: 10px;
     align-content: center;
     text-align: left;
+    background-color: var(--title-color);
 }
 
 .tut-content>ol {
@@ -59,6 +61,7 @@ h2 {
     border-radius: 10px;
     align-content: center;
     text-align: left;
+    background-color: var(--title-color);
 }
 
 .pic-content>ol {
