--- a/styles/themes/dutchess.css
+++ b/styles/themes/dutchess.css
@@ -17,149 +17,20 @@
     --error-msg: darkred;
 }
 
-body {
-    color: var(--font-color);
-    background-color: var(--page-background);
-}
-
-#cover {
-    background-color: var(--page-background);
-}
-
-#sbj-form {
-    background-color: var(--title-color);
-}
-
-.main-content {
-    background-color: var(--title-color);
-}
-
-.tut-content {
-    background-color: var(--title-color);
-}
-
-.pic-content {
-    background-color: var(--title-color);
-}
-
-hr {
-    background-color: var(--font-color);
-}
-
-.pageTitle {
-    color: var(--title-color);
-}
-
-dialog {
-    background-color: var(--top-bar-color);
-}
-
-#themebutton {
-    background-color: var(--top-bar-color);
-    color: var(--page-background);
-}
-
-#themebutton:hover {
-    background-color: var(--calculated-hover);
-    color: var(--font-color);
-}
-
-.subDiff {
-    background-color: var(--link-color);
-}
-
-.subDiff::-webkit-slider-thumb {
-    background: var(--top-bar-color);
-}
-
-#topBar {
-    background-color: var(--top-bar-color);
-}
-
-.item {
-    color: var(--link-color);
-}
-
-#test:hover {
-    background-color: var(--disabled-background);
-    color: var(--hover-text);
-}
-
-#returnDates {
-    background-color: var(--title-color);
-}
-
 .item:hover {
-    background-color: var(--calculated-hover);
-    color: var(--font-color);
-}
-
-.inputBox {
-    background-color: var(--link-color);
-}
-
-.cButton {
-    background-color: var(--font-color);
-    color: var(--page-background);
-}
-
-.cButton:hover {
-    background-color: var(--calculated-hover);
-    color: var(--font-color);
-}
-
-#errormsg {
-    color: var(--error-msg);
-}
-
-.month {
-    background: var(--top-bar-color);
-}
-
-.month ul li {
-    color: var(--cal-monthtxt-color);
-}
-
-.weekdays {
-    background-color: var(--cal-weekday-color);
-}
-
-.weekdays li {
-    color: var(--top-bar-color);
-}
-
-.days {
-    background: var(--cal-day-color);
-}
-
-.days li {
-    color: var(--cal-date-color);
-}
-
-.days li .active {
-    background: var(--top-bar-color);
-    color: white !important;
-}
-
-.days li .study {
-    background: var(--cal-weekday-color);
-    color: white !important;
-}
-
-
-/* Handle */
-
-::-webkit-scrollbar-thumb {
-    background: var(--top-bar-color);
-}
-
-
-/* Handle on hover */
-
- ::-webkit-scrollbar-thumb:hover {
-    background: var(--calculated-hover);
+    background-color: var(--calculated-hover)!important;
+    color: var(--font-color)!important;
 }
 
 #placeholderDate {
     color: var(--cal-day-color);
+}
+
+#themeChoice {
+    background-color: var(--title-color);
+    color: var(--font-color);
+}
+
+#themeChoice:hover {
+    background-color: var(--calculated-hover);
 }
