--- a/styles/themes/monotonedark.css
+++ b/styles/themes/monotonedark.css
@@ -5,6 +5,8 @@
     /*yeet*/
     --cal-date-color: #777;
     /* page values */
+    --text-color: #000;
+
     --title-color: #E0DDCF;
     --top-bar-color: #534B52;
     /*--font-color: #d0cfcc;*/
