--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -25,7 +25,7 @@ hr {
 
 .pageTitle {
     font-size: 20px;
-    color: var(--title-color);
+    color: var(--text-color);
 }
 
 #topBar {
@@ -33,7 +33,7 @@ hr {
     margin: 0 auto 10px;
     text-align: center;
     padding: 10px 50px;
-    line-height: 28px;
+    line-height: 40px;
     width: fit-content;
     border-bottom-left-radius: var(--border-radius);
     border-bottom-right-radius: var(--border-radius);
@@ -63,13 +63,12 @@ hr {
 }
 
 .selected {
-    text-decoration: underline;
+    font-weight: bold;
 }
 
 .item:hover {
     border-radius: 5px;
     cursor: pointer;
-    background-color: var(--title-color);
     color: var(--hover-text);
 }
 
@@ -133,7 +132,7 @@ dialog::backdrop {
     border-radius: 8px;
     border: 0;
     background-color: var(--top-bar-color);
-    color: var(--title-color);
+    color: var(--text-color);
 }
 
 .topLeft {
@@ -500,7 +499,7 @@ footer {
 #feedbackButton {
     text-align: center;
     margin: 0 auto 15px auto;
-    padding: 5px 8px;
+    padding: 15px 32px;
     width: fit-content;
 }
 
